[package]
name = "http_server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
tower = "0.5"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "tokio", "server-auto"] }
tokio-rustls = "0.25"

rustls = "0.22"
rustls-pemfile = "2"
pem = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rcgen = "0.13"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenv = "0.15"
http-body-util = "0.1"
toml = "0.8"
tower-http = { version = "0.5", features = ["cors", "compression-gzip", "trace", "set-header"] }